// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unlock Verification Authenticator Selector Tests should add UI elements for unlock account flow 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "account.unlock.title",
                },
                "type": "Title",
                "viewIndex": 0,
              },
              {
                "options": {
                  "inputMeta": {
                    "name": "identifier",
                  },
                },
                "type": "Field",
                "viewIndex": 0,
              },
              {
                "label": "oform.next",
                "options": {
                  "nextStepIndex": [Function],
                  "type": "submit",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.select.authenticators.verify.title",
                },
                "type": "Title",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.select.authenticators.verify.subtitle",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "buttons": [
                    {
                      "label": "Email",
                      "options": {
                        "actionParams": {
                          "authenticator.id": "123abc",
                        },
                        "ariaLabel": "Select email.",
                        "ctaLabel": "Select",
                        "key": "okta_email",
                        "step": "select-authenticator-unlock-account",
                        "type": "button",
                      },
                      "type": "AuthenticatorButton",
                    },
                  ],
                  "dataSe": "authenticator-verify-list",
                },
                "type": "AuthenticatorButtonList",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "key": "unlockAccountStepper",
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unlock Verification Authenticator Selector Tests should add identifier container when features.showIdentifier = true 1`] = `
{
  "data": {
    "identifier": "testUser@okta.com",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "account.unlock.title",
                },
                "type": "Title",
                "viewIndex": 0,
              },
              {
                "options": {
                  "inputMeta": {
                    "name": "identifier",
                  },
                },
                "type": "Field",
                "viewIndex": 0,
              },
              {
                "label": "oform.next",
                "options": {
                  "nextStepIndex": [Function],
                  "type": "submit",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "identifier": "testUser@okta.com",
                },
                "type": "IdentifierContainer",
              },
              {
                "options": {
                  "content": "oie.select.authenticators.verify.title",
                },
                "type": "Title",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.select.authenticators.verify.subtitle",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "buttons": [
                    {
                      "label": "Email",
                      "options": {
                        "actionParams": {
                          "authenticator.id": "123abc",
                        },
                        "ariaLabel": "Select email.",
                        "ctaLabel": "Select",
                        "key": "okta_email",
                        "step": "select-authenticator-unlock-account",
                        "type": "button",
                      },
                      "type": "AuthenticatorButton",
                    },
                  ],
                  "dataSe": "authenticator-verify-list",
                },
                "type": "AuthenticatorButtonList",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "key": "unlockAccountStepper",
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unlock Verification Authenticator Selector Tests should not add identifier container if identifier is empty string 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "account.unlock.title",
                },
                "type": "Title",
                "viewIndex": 0,
              },
              {
                "options": {
                  "inputMeta": {
                    "name": "identifier",
                  },
                },
                "type": "Field",
                "viewIndex": 0,
              },
              {
                "label": "oform.next",
                "options": {
                  "nextStepIndex": [Function],
                  "type": "submit",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.select.authenticators.verify.title",
                },
                "type": "Title",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.select.authenticators.verify.subtitle",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "buttons": [
                    {
                      "label": "Email",
                      "options": {
                        "actionParams": {
                          "authenticator.id": "123abc",
                        },
                        "ariaLabel": "Select email.",
                        "ctaLabel": "Select",
                        "key": "okta_email",
                        "step": "select-authenticator-unlock-account",
                        "type": "button",
                      },
                      "type": "AuthenticatorButton",
                    },
                  ],
                  "dataSe": "authenticator-verify-list",
                },
                "type": "AuthenticatorButtonList",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "key": "unlockAccountStepper",
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unlock Verification Authenticator Selector Tests should not add identifier container if transaction NextStep is "admin-consent" 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "account.unlock.title",
                },
                "type": "Title",
                "viewIndex": 0,
              },
              {
                "options": {
                  "inputMeta": {
                    "name": "identifier",
                  },
                },
                "type": "Field",
                "viewIndex": 0,
              },
              {
                "label": "oform.next",
                "options": {
                  "nextStepIndex": [Function],
                  "type": "submit",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.select.authenticators.verify.title",
                },
                "type": "Title",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.select.authenticators.verify.subtitle",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "buttons": [
                    {
                      "label": "Email",
                      "options": {
                        "actionParams": {
                          "authenticator.id": "123abc",
                        },
                        "ariaLabel": "Select email.",
                        "ctaLabel": "Select",
                        "key": "okta_email",
                        "step": "select-authenticator-unlock-account",
                        "type": "button",
                      },
                      "type": "AuthenticatorButton",
                    },
                  ],
                  "dataSe": "authenticator-verify-list",
                },
                "type": "AuthenticatorButtonList",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "key": "unlockAccountStepper",
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unlock Verification Authenticator Selector Tests should not add identifier container if transaction NextStep is "identify" 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "account.unlock.title",
                },
                "type": "Title",
                "viewIndex": 0,
              },
              {
                "options": {
                  "inputMeta": {
                    "name": "identifier",
                  },
                },
                "type": "Field",
                "viewIndex": 0,
              },
              {
                "label": "oform.next",
                "options": {
                  "nextStepIndex": [Function],
                  "type": "submit",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.select.authenticators.verify.title",
                },
                "type": "Title",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.select.authenticators.verify.subtitle",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "buttons": [
                    {
                      "label": "Email",
                      "options": {
                        "actionParams": {
                          "authenticator.id": "123abc",
                        },
                        "ariaLabel": "Select email.",
                        "ctaLabel": "Select",
                        "key": "okta_email",
                        "step": "select-authenticator-unlock-account",
                        "type": "button",
                      },
                      "type": "AuthenticatorButton",
                    },
                  ],
                  "dataSe": "authenticator-verify-list",
                },
                "type": "AuthenticatorButtonList",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "key": "unlockAccountStepper",
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unlock Verification Authenticator Selector Tests should not add identifier container when features.showIdentifier = false 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "account.unlock.title",
                },
                "type": "Title",
                "viewIndex": 0,
              },
              {
                "options": {
                  "inputMeta": {
                    "name": "identifier",
                  },
                },
                "type": "Field",
                "viewIndex": 0,
              },
              {
                "label": "oform.next",
                "options": {
                  "nextStepIndex": [Function],
                  "type": "submit",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.select.authenticators.verify.title",
                },
                "type": "Title",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.select.authenticators.verify.subtitle",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "buttons": [
                    {
                      "label": "Email",
                      "options": {
                        "actionParams": {
                          "authenticator.id": "123abc",
                        },
                        "ariaLabel": "Select email.",
                        "ctaLabel": "Select",
                        "key": "okta_email",
                        "step": "select-authenticator-unlock-account",
                        "type": "button",
                      },
                      "type": "AuthenticatorButton",
                    },
                  ],
                  "dataSe": "authenticator-verify-list",
                },
                "type": "AuthenticatorButtonList",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "key": "unlockAccountStepper",
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unlock Verification Authenticator Selector Tests should not add identifier container when features.showIdentifier is undefined 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "elements": [
          {
            "elements": [
              {
                "options": {
                  "content": "account.unlock.title",
                },
                "type": "Title",
                "viewIndex": 0,
              },
              {
                "options": {
                  "inputMeta": {
                    "name": "identifier",
                  },
                },
                "type": "Field",
                "viewIndex": 0,
              },
              {
                "label": "oform.next",
                "options": {
                  "nextStepIndex": [Function],
                  "type": "submit",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "options": {
                  "content": "oie.select.authenticators.verify.title",
                },
                "type": "Title",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.select.authenticators.verify.subtitle",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "options": {
                  "buttons": [
                    {
                      "label": "Email",
                      "options": {
                        "actionParams": {
                          "authenticator.id": "123abc",
                        },
                        "ariaLabel": "Select email.",
                        "ctaLabel": "Select",
                        "key": "okta_email",
                        "step": "select-authenticator-unlock-account",
                        "type": "button",
                      },
                      "type": "AuthenticatorButton",
                    },
                  ],
                  "dataSe": "authenticator-verify-list",
                },
                "type": "AuthenticatorButtonList",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "key": "unlockAccountStepper",
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
